[gd_scene load_steps=15 format=2]

[ext_resource path="res://sfx/fall.mp3" type="AudioStream" id=1]
[ext_resource path="res://sfx/place.mp3" type="AudioStream" id=2]
[ext_resource path="res://sfx/thud.mp3" type="AudioStream" id=3]
[ext_resource path="res://sfx/grab.mp3" type="AudioStream" id=4]
[ext_resource path="res://gfx/angry.png" type="Texture" id=5]
[ext_resource path="res://gfx/smiling.png" type="Texture" id=6]
[ext_resource path="res://box.gd" type="Script" id=7]
[ext_resource path="res://gfx/scared.png" type="Texture" id=8]
[ext_resource path="res://gfx/base.png" type="Texture" id=9]
[ext_resource path="res://gfx/happy.png" type="Texture" id=10]
[ext_resource path="res://gfx/worried.png" type="Texture" id=11]
[ext_resource path="res://gfx/base_overlay.png" type="Texture" id=12]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
absorbent = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.3823, 30.0149 )

[node name="box" type="RigidBody2D"]
position = Vector2( 509.008, 367.897 )
input_pickable = true
mode = 1
physics_material_override = SubResource( 1 )
continuous_cd = 1
contacts_reported = 10
contact_monitor = true
script = ExtResource( 7 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="overlay" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="happy" type="Sprite" parent="."]
visible = false
texture = ExtResource( 10 )

[node name="scared" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="angry" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="worried" type="Sprite" parent="."]
visible = false
texture = ExtResource( 11 )

[node name="smiling" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.943937, -507.787 )
scale = Vector2( 6.14562, 55.116 )

[node name="place_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="fall_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0

[node name="thud_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="grab_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
